--- a/project/src/main/res/layout/fragment_log_in.xml
+++ b/project/src/main/res/layout/fragment_log_in.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true" >
+    android:fillViewport="true">
 
     <LinearLayout
         android:id="@+id/outer_container"
@@ -164,6 +165,48 @@
                 android:hint="?attr/skin_passwordHint"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword" />
+        </LinearLayout>
+
+        <!-- Facebook sigin in fields -->
+
+        <!-- Facebook email permission denied message/buttons -->
+
+        <LinearLayout
+            android:id="@+id/facebook_email_denied_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <com.expedia.bookings.widget.TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="0"
+                android:text="@string/user_denied_permission_email_message"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                app:textStyle="light" />
+
+            <Button
+                android:id="@+id/try_facebook_again"
+                style="@style/LoginFormButton"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="@dimen/login_side_margin_small"
+                android:layout_marginRight="@dimen/login_side_margin_small"
+                android:background="@drawable/btn_facebook_signin"
+                android:contentDescription="@string/cd_log_in_with_facebook"
+                android:gravity="center"
+                android:text="@string/authorize_email_facebook_button" />
+
+            <Button
+                android:id="@+id/try_facebook_again_cancel"
+                style="@style/LoginFormButton"
+                android:layout_marginTop="0dp"
+                android:background="@drawable/btn_cancel"
+                android:gravity="center"
+                android:text="@string/cancel" />
         </LinearLayout>
 
         <!-- Facebook connect buttons -->
