--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -69,6 +69,7 @@
     <color name="hotel_filter_spinner_dropdown_color_selected">#DFE0E2</color>
     <color name="hotel_filter_spinner_color_selected">#CDCED0</color>
     <color name="hotel_filter_spinner_text_color">#393E43</color>
+    <color name="etp_text_color">#29a653</color>
 
     <!-- Login -->
     <color name="login_shade_flights">#32000000</color>
@@ -198,4 +199,7 @@
 
     <color name="tablet_book_button_text_color">#FFDB4C</color>
     <color name="tablet_trip_bucket_text_color">@android:color/primary_text_light</color>
+
+    <color name="sliding_group_text_bright">#f4f5f7</color>
+    <color name="sliding_group_text_dim">#4a4f54</color>
 </resources>
