--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -1036,4 +1036,21 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Widget.SlidingRadioButton" />
+
+    <style name="Widget.SlidingRadioButton.Filter">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:button">@android:color/transparent</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/sliding_group_text</item>
+        <item name="android:textSize">13dp</item>
+        <item name="textStyle">normal</item>
+    </style>
 </resources>
