3757: Hotel details ETP (pay later) info - pay later info banner appears on hotel details screen when there is an ETP offer associated with the property - clicking banner leads to pay later info screen

--- a/project/src/main/res/layout/fragment_hotel_details_intro.xml
+++ b/project/src/main/res/layout/fragment_hotel_details_intro.xml
@@ -131,6 +131,15 @@
         android:layout_marginRight="15dp"
         android:background="@color/hotel_details_separator" />
 
+    <!-- ETP pay later info if applicable -->
+
+    <include
+        android:id="@+id/pay_later_info_banner"
+        layout="@layout/include_pay_later_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
     <!-- Hotel intro paragraph -->
 
     <include
