--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -271,4 +271,7 @@
     <!-- Flight Map -->
     <attr name="skin_tablet_flight_map_arrival_pin" format="reference" />
     <attr name="skin_tablet_hotel_details_background_drawable" format="reference" />
+
+      <!--Action menu done button text -->
+    <attr name="skin_actionMenuDoneButtonText" format="reference|string" />
 </resources>
