--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -88,6 +88,7 @@
         <item name="skin_flightsCostSummaryDialogStripeDrawable">@drawable/rainbow_bar</item>
         <item name="skin_travellerInfoPageLogo">@drawable/ic_vsc_traveler_logo</item>
         <item name="skin_travellerInfoPageLogoDisabled">@drawable/ic_vsc_traveler_logo_disabled</item>
+        <item name="skin_actionMenuDoneButtonText">@string/button_done_vsc_confirmation</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
