--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -3,23 +3,103 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/pickup_datetime"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <com.mobiata.android.time.widget.CalendarPicker
-        android:id="@+id/calendar"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_gravity="bottom" />
+        <Button
+            android:id="@+id/pickup_datetime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pick_up_time" />
 
-    <TextView
-        android:id="@+id/change_time"
+        <Button
+            android:id="@+id/dropoff_datetime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/drop_off_time" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/time_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#ff00ff"
-        android:gravity="center" />
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:id="@+id/time_top_bar"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_margin="12dp">
+
+            <TextView
+                android:id="@+id/change_date_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Change Date"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:layout_gravity="left" />
+
+            <TextView
+                android:id="@+id/time_confirm_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Confirm"
+                android:textAllCaps="true"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+        <TimePicker
+            android:id="@+id/time_picker"
+            android:layout_width="match_parent"
+            android:layout_height="144dp" />
+
+        <FrameLayout
+            android:id="@+id/time_bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_margin="12dp">
+
+            <TextView
+                android:id="@+id/time_picker_detail_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="September 25 - 9:41 AM PST"
+                android:gravity="center" />
+        </FrameLayout>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/calendar_container"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_gravity="bottom">
+
+        <TextView
+            android:id="@+id/calendar_action_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right" />
+
+        <com.mobiata.android.time.widget.CalendarPicker
+            android:id="@+id/calendar"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_gravity="bottom" />
+
+        <TextView
+            android:id="@+id/change_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#ff00ff"
+            android:gravity="center" />
+
+    </FrameLayout>
 
 </com.expedia.bookings.widget.CarSearchParamsWidget>
