Reduced the size of the placeholders on tablet

--- a/project/src/main/res/layout-sw600dp/section_hotel_summary_tablet.xml
+++ b/project/src/main/res/layout-sw600dp/section_hotel_summary_tablet.xml
@@ -27,6 +27,7 @@
         android:id="@+id/hotel_background_view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/hotel_flight_card_height"
+        android:background="@color/placeholder_background_color"
         android:scaleType="centerCrop"/>
 
     <View
