--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -202,4 +202,7 @@
 
     <color name="sliding_group_text_bright">#f4f5f7</color>
     <color name="sliding_group_text_dim">#4a4f54</color>
+
+    <color name="placeholder_background_color">#21394E</color>
+
 </resources>
