--- a/project/src/main/res/layout/fragment_availability_list.xml
+++ b/project/src/main/res/layout/fragment_availability_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="48dp"
         android:background="@color/header_background"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/TextAppearance.Header"
@@ -23,72 +23,57 @@
     </LinearLayout>
 
     <!-- Hotel Notices : Resort fees, Renovation notices, etc? -->
-
-    <LinearLayout
-        android:id="@+id/hotel_notice_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/rooms_and_rates_notice_bg"
-        android:orientation="vertical" />
-
-    <com.expedia.bookings.widget.SlidingRadioGroup
-        android:id="@+id/radius_pay_options"
-        style="@style/Widget.SlidingRadioGroup.TabletFilterControls"
+    <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="12dp">
+        android:layout_height="fill_parent">
 
-        <RadioButton
-            android:id="@+id/radius_pay_now"
-            style="@style/Widget.SlidingRadioButton.Filter"
-            android:text="Pay Now"
-            android:contentDescription="@string/cd_pay_now" />
-
-        <RadioButton
-            android:id="@+id/radius_pay_later"
-            style="@style/Widget.SlidingRadioButton.Filter"
-            android:text="Pay Later"
-            android:contentDescription="@string/cd_pay_later" />
-
-    </com.expedia.bookings.widget.SlidingRadioGroup>
-
-    <ListView
-        android:id="@android:id/list"
-        style="@style/HotelList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:divider="@drawable/divider_horizontal_dark_opaque" />
-
-    <LinearLayout
-        android:id="@android:id/empty"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center"
-        android:orientation="vertical" >
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="@style/ProgressBar.Large"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true" />
-
-        <TextView
-            android:id="@+id/empty_text_view"
+        <ListView
+            android:id="@android:id/list"
+            style="@style/HotelList"
             android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:divider="@drawable/divider_horizontal_dark_opaque" />
+
+        <LinearLayout
+            android:id="@+id/hotel_notice_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/rooms_and_rates_notice_bg"
+            android:orientation="vertical" />
+
+        <include
+            layout="@layout/include_rooms_and_rates_radio_group"
+            android:id="@+id/sticky_header" />
+
+        <LinearLayout
+            android:id="@android:id/empty"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:gravity="center"
-            android:padding="20dp"
-            android:shadowColor="#88FFFFFF"
-            android:shadowDx="0"
-            android:shadowDy="-1"
-            android:shadowRadius="0.1"
-            android:textColor="#FF666666"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/ProgressBar.Large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+
+            <TextView
+                android:id="@+id/empty_text_view"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="20dp"
+                android:shadowColor="#88FFFFFF"
+                android:shadowDx="0"
+                android:shadowDy="-1"
+                android:shadowRadius="0.1"
+                android:textColor="#FF666666"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
