--- a/project/src/main/res/layout/fragment_booking_overview.xml
+++ b/project/src/main/res/layout/fragment_booking_overview.xml
@@ -251,6 +251,16 @@
                     android:layout_marginBottom="16dp"
                     android:textColor="@android:color/white"
                     android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/etp_payment_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:textColor="@android:color/white"
+                    android:visibility="gone" />
+
             </com.expedia.bookings.widget.LinearLayout>
 
             <View
