--- a/project/src/main/res/layout/fragment_pay_later_info_screen.xml
+++ b/project/src/main/res/layout/fragment_pay_later_info_screen.xml
@@ -57,9 +57,9 @@
                 <include layout="@layout/include_etp_bullet" />
 
                 <TextView
+                    android:id="@+id/etp_pay_now_currency_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/etp_pay_now_currency_text" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -113,9 +113,9 @@
                 <include layout="@layout/include_etp_bullet" />
 
                 <TextView
+                    android:id="@+id/etp_pay_later_currency_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/etp_pay_later_currency_text" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
