--- a/project/src/main/res/layout/activity_rooms_and_rates.xml
+++ b/project/src/main/res/layout/activity_rooms_and_rates.xml
@@ -103,7 +103,7 @@
     <!-- List of rooms/rates -->
 
     <fragment
-        android:name="com.expedia.bookings.fragment.RoomsAndRatesFragment"
+        android:name="com.expedia.bookings.fragment.HotelRoomsAndRatesFragment"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
