--- a/project/src/main/res/layout/fragment_booking_overview.xml
+++ b/project/src/main/res/layout/fragment_booking_overview.xml
@@ -242,22 +242,12 @@
                     android:textColor="@android:color/white" />
 
                 <TextView
-                    android:id="@+id/resort_fee_disclaimer"
+                    android:id="@+id/checkout_disclaimer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:textColor="@android:color/white"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/etp_payment_info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
                     android:textColor="@android:color/white"
                     android:visibility="gone" />
 
