--- a/project/src/main/res/layout-land/fragment_hotel_details_mini_gallery.xml
+++ b/project/src/main/res/layout-land/fragment_hotel_details_mini_gallery.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.HotelDetailsGallery xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.RecyclerGallery xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mobiata="http://schemas.android.com/apk/res-auto"
     android:id="@+id/images_gallery"
     android:layout_width="match_parent"
