--- a/project/src/main/res/layout/snippet_tablet_hotel_gallery_item.xml
+++ b/project/src/main/res/layout/snippet_tablet_hotel_gallery_item.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent" >
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/image"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:adjustViewBounds="true"
+    android:scaleType="fitCenter" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/placeholder_background_color"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop" />
 
-</FrameLayout>
