--- a/project/src/main/res/layout-sw600dp/section_hotel_edit_creditcard.xml
+++ b/project/src/main/res/layout-sw600dp/section_hotel_edit_creditcard.xml
@@ -88,12 +88,7 @@
 
             <EditText
                 android:id="@+id/edit_name_on_card"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="@string/name_on_card_hint"
-                android:inputType="textPersonName|textCapWords"
-                android:singleLine="true"/>
+                style="?attr/skin_HotelCheckout_CreditCardEditTextStyle" />
 
             <include
                 android:id="@+id/section_location_address"
