--- a/project/src/voyages/res/values-sw600dp/styles.xml
+++ b/project/src/voyages/res/values-sw600dp/styles.xml
@@ -3,17 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <style name="RatingBar.UserReview.VSC.Purple">
-        <item name="android:progressDrawable">@drawable/ratingbar_userreview_vsc_purple</item>
-    </style>
-
-    <style name="RatingBar.UserReview.VSC"/>
-
     <!-- Credit Card Edit Text on hotel checkout(textNoSuggestions) -->
     <style name="CreditCardEditText">
         <item name="android:hint">@string/name_on_card_hint</item>
         <item name="android:inputType">textNoSuggestions</item>
         <item name="android:singleLine">true</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <!-- Postal Code Section on hotel checkout(Invisible for VSC) -->
@@ -21,12 +18,6 @@
         <item name="android:paddingLeft">2dp</item>
         <item name="android:paddingRight">2dp</item>
         <item name="android:visibility">invisible</item>
-    </style>
-
-    <style name="CouponEditText">
-        <item name="android:hint">@string/optional</item>
-        <item name="android:inputType">textFilter|textCapCharacters</item>
-        <item name="android:singleLine">true</item>
     </style>
 
 </resources>
