--- a/project/src/main/res/layout/fragment_pay_later_info_screen.xml
+++ b/project/src/main/res/layout/fragment_pay_later_info_screen.xml
@@ -130,6 +130,21 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/etp_pay_later_payment_info_text" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="2dp">
+
+                <include layout="@layout/include_etp_bullet" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/etp_pay_later_cancellation_text" />
 
             </LinearLayout>
