--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -205,7 +205,6 @@
         <item name="skin_icSuitCaseBaggage">@drawable/ic_suitcase_baggage_fee_blue</item>
         <item name="skin_calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE</item>
         <item name="skin_calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE</item>
-        <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights</item>
         <item name="skin_candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal</item>
         <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_expedia</item>
         <item name="skin_errorHotelOffersHotelServiceFailureString">@string/e3_error_hotel_offers_hotel_service_failure</item>
@@ -214,6 +213,10 @@
         <item name="skin_HotelCheckout_CreditCardEditTextStyle">@style/CreditCardEditText</item>
         <item name="skin_HotelCheckout_PostalCodeSectionStyle">@style/PostalCodeSection</item>
         <item name="skin_HotelCheckout_couponEditTextStyle">@style/CouponEditText</item>
+        <item name="skin_hotelRulesActionBarLogo">@drawable/ic_expedia_action_bar_logo_dark</item>
+        <item name="skin_flightRulesActionBarLogo">@drawable/ic_expedia_action_bar_logo_dark</item>
+        <item name="skin_hotelLoginActionBarIcon">@drawable/ic_expedia_action_bar_logo_dark</item>
+        <item name="skin_flightLoginActionBarIcon">@drawable/ic_expedia_action_bar_logo_dark</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
@@ -413,6 +416,14 @@
 
     <style name="TerminalMapTheme" parent="@style/LaunchTheme">
         <item name="android:windowBackground">@android:color/white</item>
+    </style>
+
+    <style name="FlightTheme.Rules">
+        <item name="android:logo">?attr/skin_flightRulesActionBarLogo</item>
+    </style>
+
+    <style name="Theme.Phone.Rules">
+        <item name="android:logo">?attr/skin_hotelRulesActionBarLogo</item>
     </style>
 
 </resources>
