--- a/project/src/main/res/layout/include_rooms_and_rates_resort_fees_notice.xml
+++ b/project/src/main/res/layout/include_rooms_and_rates_resort_fees_notice.xml
@@ -2,32 +2,28 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@drawable/bg_resort_yellow_bar" />
-
     <LinearLayout
         android:id="@+id/resort_fees_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="6dp" >
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:paddingBottom="6dp">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/resort_fees_price"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="0"
             android:background="@drawable/bg_resort_fee_price"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:paddingBottom="0dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingTop="0dp"
-            android:textColor="#CBCFD3"
+            android:textColor="#FFFFFF"
             android:textSize="13sp"
             app:textStyle="normal" />
 
@@ -62,6 +58,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/rooms_and_rates_notice_bottom_div" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/divider_horizontal_dark_opaque" />
 
 </merge>
