--- a/project/src/main/res/layout/widget_test_car_search.xml
+++ b/project/src/main/res/layout/widget_test_car_search.xml
@@ -1,25 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.TestCarSearchWidget xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 android:orientation="vertical"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/download_now_btn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:text="SEARCH"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SEARCH"
+        android:layout_gravity="center_horizontal"
+        />
 
-    <ScrollView
-        android:id="@+id/text_scroll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <include layout="@layout/include_cars_search_recycler"/>
 
-        <TextView
-            android:id="@+id/display_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </ScrollView>
 
 </com.expedia.bookings.widget.TestCarSearchWidget>
