--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -210,7 +210,7 @@
         <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_expedia</item>
         <item name="skin_errorHotelOffersHotelServiceFailureString">@string/e3_error_hotel_offers_hotel_service_failure</item>
         <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/ic_tablet_checkout_expedia_logo</item>
-        <item name="skin_actionMenuDoneButtonText">@string/menu_done</item>
+        <item name="skin_actionMenuDoneButtonText">@string/button_confirmation_done</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
