--- a/project/src/main/res/layout/include_confirmation_actions_flights.xml
+++ b/project/src/main/res/layout/include_confirmation_actions_flights.xml
@@ -60,14 +60,7 @@
         android:drawableLeft="@drawable/ic_calendar_add"
         android:text="@string/add_to_calendar" />
 
-    <View
-        android:id="@+id/vsc_app_divider"
-        style="@style/Confirmation.Divider.Action.Flight"
-        android:visibility="gone" />
-
-    <include
-        layout="@layout/vsc_train_confirmation_row"
-        android:visibility="gone" />
+    <include layout="@layout/other_apps_crosssell_confirmation_row"/>
 
     <View
         android:id="@+id/flighttrack_divider"
