Revert "Get rid of IS_VSC check"
This reverts commit 3864b3f7e083a4cc4cb4da5185a467d6c5b574a9.

Changing the way we access ISO country codes caused our app to
crash with POS US on Samsung devices.

--- a/project/src/voyages/res/values/donottranslate.xml
+++ b/project/src/voyages/res/values/donottranslate.xml
@@ -6,6 +6,9 @@
     <string name="app_name">Hôtel &amp; Vol Voyages-sncf</string>
     <string name="app_vsc_info_url">http://www.voyages-sncf.com</string>
 
+    <!-- The PointOfSale code looks this identifier up with reflection, do not remove! -->
+    <string tools:ignore="UnusedResources" name="country_vs">VSC</string>
+
     <!-- Facebook -->
     <!-- Production Facebook app id -->
     <string name="facebook_app_id">482332651854403</string>
