--- a/project/src/main/res/layout/widget_car_search.xml
+++ b/project/src/main/res/layout/widget_car_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.CarSearchWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.CarSearchController xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,4 +15,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</com.expedia.bookings.widget.CarSearchWidget>
+</com.expedia.bookings.widget.CarSearchController>
