3392 change flight filters to spinner

--- a/project/src/main/res/layout/spinner_sort_dropdown_item.xml
+++ b/project/src/main/res/layout/spinner_sort_dropdown_item.xml
@@ -6,6 +6,6 @@
     android:layout_height="wrap_content"
     android:ellipsize="middle"
     android:padding="16dp"
-    android:textColor="@android:color/white"
+    android:textColor="@color/tablet_filter_checkbox_text"
     android:singleLine="true"
-    android:textSize="20dp" />
+    android:textSize="18sp" />
