--- a/project/src/main/res/layout/spinner_sort_item.xml
+++ b/project/src/main/res/layout/spinner_sort_item.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     android:ellipsize="middle"
     android:textScaleX=".8"
-    android:padding="12dp"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
+    android:paddingRight="12dp"
+    android:paddingLeft="16dp"
     android:textColor="@color/hotel_filter_spinner_text_color"
     android:singleLine="true"
-    android:textSize="22dp" />
+    android:textSize="20sp" />
