--- a/project/src/main/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/main/res/values-sw600dp/tablet_themes.xml
@@ -188,13 +188,14 @@
     <style name="V2.Widget.TextView.FakeSpinner">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/fake_spinner_default_holo_light</item>
-        <item name="android:paddingLeft">12dp</item>
-        <item name="android:paddingTop">16dp</item>
-        <item name="android:paddingBottom">16dp</item>
+        <item name="android:background">@drawable/spinner_sort</item>
+        <item name="android:padding">12dp</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textColor">@color/tablet_flight_filter_text_color</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/hotel_filter_spinner_text_color</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:ellipsize">middle</item>
+        <item name="android:textScaleX">.8</item>
+
     </style>
 
     <style name="V2.Widget.TextView.FakeSpinner.AirportFilter">
