--- a/project/src/main/res/values/arrays.xml
+++ b/project/src/main/res/values/arrays.xml
@@ -807,10 +807,17 @@
         <item>Custom Server</item>
     </string-array>
 
-    <string-array name="sort_options">
+    <string-array name="sort_options_hotels">
         <item>@string/popular</item>
         <item>@string/price</item>
         <item>@string/discounts</item>
         <item>@string/rating</item>
+    </string-array>
+
+    <string-array name="sort_options_flights">
+        <item>@string/sort_description_price</item>
+        <item>@string/sort_description_departure</item>
+        <item>@string/sort_description_arrival</item>
+        <item>@string/sort_description_duration</item>
     </string-array>
 </resources>
