--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -62,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/location_container"
-            android:text="@string/select_dates"/>
+            android:text="@string/select_pickup_and_dropoff_dates"/>
     </RelativeLayout>
 
     <LinearLayout
