--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.CarSearchParamsWidget xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -88,7 +88,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:text="@string/pick_up_time_label"/>
 
             <SeekBar
@@ -109,15 +109,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/drop_off_time_label"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:layout_weight="1"/>
 
             <SeekBar
                 android:id="@+id/dropoff_time_seek_bar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:max="47"
-                android:layout_weight="5"/>
+                android:layout_weight="5"
+                android:max="47" />
         </LinearLayout>
     </LinearLayout>
 
