--- a/project/src/main/res/layout/widget_car_category_list.xml
+++ b/project/src/main/res/layout/widget_car_category_list.xml
@@ -2,11 +2,11 @@
 <com.expedia.bookings.widget.CarCategoryListWidget xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_category"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
