--- a/project/src/main/res/layout/activity_cars.xml
+++ b/project/src/main/res/layout/activity_cars.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.presenter.CarsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cars_presenter"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
